== Version 1.0.6 (in SVN)

* Fixed [#11545] Rspec doesn't handle should_receive on ActiveRecord associations (Patch from Ian White)
* Fixed [#11514] configuration.use_transactional_fixtures is ALWAYS true, regardless of assignment
* Improved generated RESTful controller examples to cover both successful and unsuccessful POST and PUT
* Changed TextMate snippets for controllers to pass controller class names to #describe rather than controller_name.
* Changed TextMate snippets for mocks to use no_args() and any_args() instead of the deprecated Symbols.
* Applied [#11500] Documentation: no rails integration specs in 1.0
* Renamed SpecMate's shortcuts for running all examples and focused examples to avoid conflicts (CMD-d and CMD-i)
* Added a TextMate snippet for custom matchers, lifted from Geoffrey Grosenbach's RSpec peepcode show.
* The translator translates mock constraints to the new matchers that were introduced in 1.0.4
* Documented environment variables for Spec::Rake::SpecTask. Renamed SPECOPTS and RCOVOPTS to SPEC_OPTS and RCOV_OPTS.
* Fixed [#10534] Windows: undefined method 'controller_name'

== Version 1.0.5
Bug fixes. Autotest plugin tweaks.

* Fixed [#11378] fix to 10814 broke drb (re-opened #10814)
* Fixed [#11223] Unable to access flash from rails helper specs
* Fixed [#11337] autotest runs specs redundantly
* Fixed [#11258] windows: autotest won't run
* Applied [#11253] Tweaks to autotest file mappings (Patch from Wincent Colaiuta)
* Applied [#11252] Should be able to re-load file containing shared behaviours without raising an exception (Patch from Wincent Colaiuta)
* Fixed [#11247] standalone autotest doesn't work because of unneeded autotest.rb
* Applied [#11221] Autotest support does not work w/o Rails Gem installed (Patch from Josh Knowles)

== Version 1.0.4
The getting ready for JRuby release.

* Fixed [#11181] behaviour_type scoping of config.before(:each) is not working