@@ -2,19 +2,19 @@ module Spec
   module Mocks
     module Methods
       def should_receive(sym, opts={}, &block)
-        __mock_proxy.add_message_expectation(opts[:expected_from] || caller(1)[0], sym, opts, &block)
+        __mock_proxy.add_message_expectation(opts[:expected_from] || caller(1)[0], sym.to_sym, opts, &block)
       end
 
       def should_not_receive(sym, &block)
-        __mock_proxy.add_negative_message_expectation(caller(1)[0], sym, &block)
+        __mock_proxy.add_negative_message_expectation(caller(1)[0], sym.to_sym, &block)
       end
       
       def stub!(sym)
-        __mock_proxy.add_stub(caller(1)[0], sym)
+        __mock_proxy.add_stub(caller(1)[0], sym.to_sym)
       end
       
       def received_message?(sym, *args, &block) #:nodoc:
-        __mock_proxy.received_message?(sym, *args, &block)
+        __mock_proxy.received_message?(sym.to_sym, *args, &block)
       end
       
       def rspec_verify #:nodoc:
